--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ notebook==6.4.12
 gitpython==3.1.42
 miditok==3.0.0
 pypianoroll==1.0.4
-scikit-learn==1.4.1.post1
+scikit-learn==1.5.0
 seaborn==0.13.2
 editdistance==0.8.1
 music21==8.3.0
